# my-world

./: .gitignore  README.md  build-profile.json5  oh-package.json5
.superpowers/sdd/: device-input-fix-report.md  final-fix-report.md  stage3-final-fixes-report.md  stage3-task-3-report.md  stage3-task-4-report.md  stage3-task-5-report.md  stage3-task-6-report.md  stage3-task-7-report.md  stage3-task-8-report.md  task-1-report.md  task-4-report.md  task-5-report.md  task-6-enemy-ai-report.md  task-6-report.md
AppScope/: app.json5
assets/: manifest.json
assets/models/: LICENSES.md
automation/hvigor/: check_rules.js
automation/perf/: profile_collect.sh
config/dev/: characters.json  enemies.json  relics.json  resonances.json
config/schema/: resonance.schema.json
docs/superpowers/plans/: 2026-07-12-ethelan-mvp-native-skeleton.md  2026-07-13-native-window-crash-fix.md  2026-07-14-combat-foundation.md  2026-07-14-combat-vertical-slice-roadmap.md  2026-07-14-readme.md  2026-07-15-character-combat-three-sources.md  2026-07-15-input-camera.md  2026-07-15-mobile-search-coupon-component.md  2026-07-16-precision-dodge-window.md  2026-07-16-pulse-hit-countdown.md  2026-07-17-enemy-ai.md  2026-07-18-boss-level-flow.md  2026-07-19-3d-rendering-foundation.md  2026-07-19-hud-presentation-optimization.md  2026-07-20-gltf-skeletal-animation.md  2026-07-21-m4-investor-demo.md  2026-07-22-task1-animation-completion.md  M4-decision.md
docs/superpowers/specs/: 2026-07-12-harmonyos-openworld-rpg-design.md  2026-07-13-native-window-crash-fix-design.md  2026-07-13-readme-design.md  2026-07-14-combat-vertical-slice-design.md  2026-07-15-character-combat-three-sources-design.md  2026-07-15-input-camera-design.md  2026-07-15-mobile-search-coupon-component-design.md  2026-07-17-enemy-ai-design.md  2026-07-19-3d-rendering-foundation-design.md  2026-07-19-hud-presentation-optimization-design.md  2026-07-20-gltf-skeletal-animation-design.md  2026-07-21-m4-investor-demo-design.md  2026-07-22-task1-animation-completion-design.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
entry/src/main/cpp/types/libnative_game/: Index.d.ts  oh-package.json5
native/engine/core/: event_queue.h  fixed_step.h  game_snapshot.h  lifecycle_state.h  loop.cpp  loop.h  snapshot_store.h  tick_clock.h
native/engine/input/: camera_gesture.h  changed_pointer_forwarder.h  input_event.h  input_queue.h  player_intent.h  pointer_input.h  touch_router.h  virtual_joystick.h
native/engine/math/: vec2.h
native/engine/presentation/: performance_guard.cpp  performance_guard.h  vfx_system.cpp  vfx_system.h
native/engine/render/: camera.cpp  camera.h  camera3d.cpp  camera3d.h  camera_render_state.h  combat_animation.h  mesh.cpp  mesh.h  render_animation.h  render_lifecycle.h  shader_3d.cpp  shader_3d.h  skinned_model.cpp  skinned_model.h  surface.cpp  surface.h  texture.cpp  texture.h
native/engine/resource/: loader.cpp  loader.h  save.cpp  save.h
native/gameplay/ai/: action_executor.cpp  action_executor.h  combat_region.cpp  combat_region.h  decision_policy.cpp  decision_policy.h  encounter_controller.cpp  encounter_controller.h  enemy_agent.cpp  enemy_agent.h  enemy_ai_config.h  enemy_ai_types.h  enemy_archetypes.cpp  enemy_archetypes.h  perception_system.cpp  perception_system.h  tactical_planner.cpp  (+1 more)
tests/: gltf_fixture_builder.h  test_action_state_machine.cpp  test_audio_bridge.cpp  test_boss_controller.cpp  test_bridge_contract.mjs  test_camera.cpp  test_camera3d.cpp  test_camera_render_transform.cpp  test_changed_pointer_forwarding.cpp  test_combat_config.cpp  test_combat_controller.cpp  test_combat_region.cpp  test_combat_resources.cpp  test_config_schema.cpp  test_corrosion_guard.cpp  test_damage_resolver.cpp  test_decision_log.cpp  test_encounter_controller.cpp  test_enemy_action_executor.cpp  test_enemy_agent.cpp  test_enemy_ai_config.cpp  test_enemy_combat_integration.cpp  test_enemy_decision.cpp  test_enemy_perception.cpp  test_event_order.cpp  test_event_queue.cpp  test_fence_wait.cpp  test_fixed_step.cpp  test_input_queue.cpp  test_level_flow.cpp  test_loop_integration.cpp  test_loop_lifecycle.cpp  test_mesh.cpp  test_model_asset_commit.cpp  test_model_assets.cpp  test_performance_guard.cpp  test_player_controller.cpp  test_pointer_input.cpp  test_radiant_priest.cpp  test_render_animation.cpp  (+17 more)
(+56 files in other folders)
